klar til aflevering

--- a/public/footer/footer.html
+++ b/public/footer/footer.html
@@ -1,5 +1,5 @@
     </div>
-        <div class="container-fluid fixed-bottom" style="border-top: 2px solid rgb(66, 77, 64); padding: 5px 5px; background-color: rgb(248, 243, 236);">
+        <div class="container-fluid fixed-bottom" id="footer-container">
             <div class="row">
                 <div class="col-lg-2 col-sm-0"></div>
                 <div class="col-lg-8 col-sm-2 text-center">
