--- a/public/frontpage/frontpage.html
+++ b/public/frontpage/frontpage.html
@@ -3,31 +3,30 @@
     <div class="row">
         <div class="col-12" align="center">
             <h3>The website for writing and reading jokes</h3>
-            
         </div>
     </div>
 
     <br>
 
-    <div class="row" style="padding: 30px 0px 20px 0px; border-top: 2px solid rgb(156, 165, 155); border-bottom: 2px solid rgb(156, 165, 155); ">
+    <div class="row" id="content-of-site">
 
         <div class="col-md-3 col-sm-6">
-            <img src="/resources/group.png" alt="laugh" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;"> 
+            <img src="/resources/group.png" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;"> 
             <p>Chat with users</p>
         </div>
 
         <div class="col-md-3 col-sm-6">
-            <img src="/resources/typing.png" alt="typing" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;">
+            <img src="/resources/typing.png" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;">
             <p>Use the joke forum to share your thoughts and ideas</p>
         </div>
 
         <div class="col-md-3 col-sm-6">
-            <img src="/resources/jester.png" alt="jester" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;">
+            <img src="/resources/jester.png" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;">
             <p>Read random selected jokes</p>
         </div>
 
         <div class="col-md-3 col-sm-6">
-            <img src="/resources/haha.png" alt="haha" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;">
+            <img src="/resources/haha.png" width="150" height="150" class="mx-auto d-block" style="padding-bottom: 10px;">
             <p>Read jokes sorted by categories</p>
         </div>
 
@@ -43,3 +42,5 @@
         </div>
     </div>
 </div>
+
+<link rel="stylesheet" href="/frontpage/frontpage.css">
