--- a/public/chat/chat_room/chat_room.html
+++ b/public/chat/chat_room/chat_room.html
@@ -17,7 +17,7 @@
     <div class="row" id=chat-footer>
         <div class="col-12">
             <div class="input-group">
-                <input type="text" id="send-message" class="form-control" placeholder="Message..." aria-label="Message" aria-describedby="button-addon2">
+                <input type="text" id="send-message" class="form-control" placeholder="Message...">
                 <button class="btn btn-success" type="button" id="button-addon2" onclick="sendMessage()">Send</button>
             </div>
         </div>
