--- a/public/header/header.html
+++ b/public/header/header.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="/user/user_session.js"></script>
+    <!-- check if logged in on all routes -->
+    <script src="/user/user_session.js"></script> 
     <title>NODE.JokeS</title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark bg-gradient fixed-top margin-top" style = "font-family: Courier;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark bg-gradient fixed-top margin-top" style="font-family: Courier;">
         <div class="container-fluid">
-
             <a href="/" class="navbar-brand navbar-header">
-                <img src="/resources/lol.png" alt="bootstrap 5 Logo" width="40" height="40" class="d-inline-block align-top"/>
+                <img src="/resources/lol.png" width="40" height="40" class="d-inline-block align-top"/>
             </a>
             <a href="/" class="navbar-brand navbar-header">
                 <h3>NODE.JokeS</h3>
@@ -29,7 +29,7 @@
                 aria-controls="toggleMobileMenu" 
                 aria-expanded="false" 
                 aria-lable="Toggle navigation"
-                > 
+            > 
                 <span class="navbar-toggler-icon"></span> 
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
@@ -49,7 +49,6 @@
                     <li style="padding: 5px 10px;">
                         <button id="login-btn" type="button" class="btn btn-light btn-sm">Login / Sign up</button>
                     </li>
-
                     <li style="padding: 0px 10px;">
                         <div id="user-profile-icon"> </div>
                     </li>
@@ -58,17 +57,7 @@
         </div>
     </nav> 
 
-    <style>
-        #nav-menu a{
-            color: rgb(242, 245, 246);
-        }
-        #nav-menu a:hover {
-            color: rgb(72, 197, 67);
-        }
-        #login-btn:hover {
-            background-color: rgb(164, 165, 170);
-        }
-    </style>
+    <link rel="stylesheet" href="/header/header.css">
 
     <div class="main-content" style="font-family: Consolas, monaco, monospace;">
 
