--- a/public/info/no_access.html
+++ b/public/info/no_access.html
@@ -1,7 +1,7 @@
 <div class="container" id="no-access" style="text-align: center;">
         <h3>No access.</h3>
         <h3>Sign up or login to view the page</h3>
-        <a href="/login">Click here</a>
+        <a href="/login_register">Click here</a>
 </div>
 
 <link rel="stylesheet" href="/info/no_access.css">
